MAGNOLIA-2506 renamed templates, paragraphs and classess, added some documentation
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@21378 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-samples/src/main/resources/info/magnolia/module/samples/messages_en.properties
+++ b/magnolia-module-samples/src/main/resources/info/magnolia/module/samples/messages_en.properties
@@ -1,8 +1,8 @@
 #Samples module messages
 samples.menu.label=Samples
-samples.config.menu.label=configuration
-samples.filter.menu.label=filter
-samples.servlet.menu.label=servlet
+samples.config.menu.label=Configuration
+samples.filter.menu.label=Filter
+samples.servlet.menu.label=Servlet
 
 dialog.sampleMain.title=Title
 dialog.sampleMain.text=Text
@@ -108,23 +108,20 @@ dialog.devShow.webDAV.tab0.label                                              = 
 dialog.devShow.webDAV.tab0.link.description                                   = NOT SUPPORTED IN MAGNOLIA 2.0
 dialog.devShow.webDAV.tab0.link.label                                         = webDAV link
 
-paragraphs.sampleJSPControlsShowRoom.description=Basic paragraph that demonstrates jsp usage
-paragraphs.sampleJSPControlsShowRoom.title=Controls sample jsp paragraph
+paragraphs.samplesControlsShowRoom.description=Basic paragraph that demonstrates magnolia controls usage
+paragraphs.samplesControlsShowRoom.title=Controls sample paragraph
 
-paragraphs.sampleFTLControlsShowRoom.description=Basic paragraph that demonstrates freemarker usage
-paragraphs.sampleFTLControlsShowRoom.title=Controls sample freemarker paragraph
+paragraphs.samplesHowToFTL.description=Basic paragraph that demonstrates freemarker usage
+paragraphs.samplesHowToFTL.title=HowTo freemarker paragraph
 
-paragraphs.sampleFreemarker.description=Basic paragraph that demonstrates freemarker usage
-paragraphs.sampleFreemarker.title=Main sample freemarker paragraph
-
-paragraphs.sampleJSP.description=Basic paragraph that demonstrates jsp usage
-paragraphs.sampleJSP.title=Main sample jsp paragraph
+paragraphs.samplesHowToJSP.description=Basic paragraph that demonstrates jsp usage
+paragraphs.samplesHowToJSP.title=HowTo jsp paragraph
 
 paragraphs.sampleFreemarkerSearch.description=Basic paragraph that demonstrates freemarker usage
 paragraphs.sampleFreemarkerSearch.title=Search sample freemarker paragraph
 
-paragraphs.sampleJSPSearch.description=Basic paragraph that demonstrates jsp usage
-paragraphs.sampleJSPSearch.title=Search sample jsp paragraph
+paragraphs.samplesSearchResult.description=Basic paragraph that demonstrates jsp usage
+paragraphs.samplesSearchResult.title=Search sample jsp paragraph
 
 paragraph.devShowAllControls.description = A dialog with all available controls
 paragraph.devShowAllControls.title       = Developer's showroom: All controls
