MAGNOLIA-2506 renamed templates, paragraphs and classess, added some documentation
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@21392 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-samples/src/main/resources/info/magnolia/module/samples/messages_en.properties
+++ b/magnolia-module-samples/src/main/resources/info/magnolia/module/samples/messages_en.properties
@@ -13,9 +13,9 @@ dialog.sampleProperties.title=Title
 dialog.sampleProperties.text=Text
 dialog.sampleProperties.description=Introduce some formatted text
 
-dialog.sampleSearch.title=Title
-dialog.sampleSearch.text=Text
-dialog.sampleSearch.description=Introduce some formatted text
+dialog.sampleSearchResult.title=Title
+dialog.sampleSearchResult.text=Text
+dialog.sampleSearchResult.description=Introduce some formatted text
 
 dialog.devShow.allControls.tabEdits.label                                     = Edit controls
 dialog.devShow.allControls.tabEdits.numberDouble.description                  =
@@ -117,11 +117,8 @@ paragraphs.samplesHowToFTL.title=HowTo freemarker paragraph
 paragraphs.samplesHowToJSP.description=Basic paragraph that demonstrates jsp usage
 paragraphs.samplesHowToJSP.title=HowTo jsp paragraph
 
-paragraphs.sampleFreemarkerSearch.description=Basic paragraph that demonstrates freemarker usage
-paragraphs.sampleFreemarkerSearch.title=Search sample freemarker paragraph
-
-paragraphs.samplesSearchResult.description=Basic paragraph that demonstrates jsp usage
-paragraphs.samplesSearchResult.title=Search sample jsp paragraph
+paragraphs.samplesSearchResult.description=Basic paragraph that demonstrates search tag usage
+paragraphs.samplesSearchResult.title=Search Result sampleparagraph
 
 paragraph.devShowAllControls.description = A dialog with all available controls
 paragraph.devShowAllControls.title       = Developer's showroom: All controls
