MAGNOLIA-2556 fixed message
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@21407 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
@@ -128,7 +128,7 @@ importexport.repository      = Repository
 
 inline.delete.text.js       = The selected paragraph will be deleted immediately.\n\nAre you sure to continue?
 inline.delete.title.js      = Delete paragraph?
-inline.move.aboveThisOne.js = Move the paragraph selected above this one
+inline.move.aboveThisOne.js = Move the selected paragraph above this one
 
 linkbrowser.refresh           = Refresh
 linkbrowser.role.fullrolename = Full role name
