--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_ja.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_ja.properties
@@ -125,7 +125,7 @@ inbox.task    = Task
 
 inline.delete.text.js       = The selected paragraph will be deleted immediately.\n\nAre you sure to continue?
 inline.delete.title.js      = Delete paragraph?
-inline.move.aboveThisOne.js = Move the paragraph selected above this one
+inline.move.aboveThisOne.js = Move the selected paragraph above this one
 
 linkbrowser.refresh           = \u66F4\u65B0
 linkbrowser.role.fullrolename = \u5168\u3066\u306E\u30ED\u30FC\u30EB\u540D
