MAGNOLIA-1805 New button's label is overridden is no paragraph(s) was/were set. ParagraphEditDialog throws a more explicit explicit exception if no paragraph(s) passed.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@21470 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
@@ -15,6 +15,7 @@ buttons.edit           = Edit
 buttons.editfooter     = Edit Footer
 buttons.move           = Move
 buttons.new            = New
+buttons.noparagraph    = No paragraph is available...
 buttons.ok             = OK
 buttons.preview        = Preview
 buttons.preview.hidden =
