MAGNOLIA-3121: allow creation of hierarchies in the user tree MGNLPUR-41 : updated tree config
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@32579 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
@@ -288,6 +288,7 @@ tree.users.menu.edit                       = Edit user ...
 tree.users.menu.groups                     = Assign groups
 tree.users.menu.move                       = Move user
 tree.users.menu.new                        = New user
+tree.users.menu.newFolder                  = New folder
 tree.users.name                            = User name
 tree.users.status                          = Status
 tree.web.date                              = Mod. date
