added enable button label
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@32592 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_en.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_en.properties
@@ -1,9 +1,10 @@
-buttons.admincentral   = AdminCentral
-buttons.delete         = Delete
-buttons.edit           = Edit
-buttons.move           = Move
-buttons.new            = New
-buttons.new.noparagraph= No paragraph is available ...
-buttons.preview        = Preview
-buttons.preview.hidden =
-buttons.properties     = Properties
+buttons.admincentral    = AdminCentral
+buttons.delete          = Delete
+buttons.edit            = Edit
+buttons.enable          = Enable
+buttons.move            = Move
+buttons.new             = New
+buttons.new.noparagraph = No paragraph is available ...
+buttons.preview         = Preview
+buttons.preview.hidden  =
+buttons.properties      = Properties
