MAGNOLIA-3124: - all dialog input values are passed to the workflow by default - dates are transformed to a openwfe friendly string format - acivation dialogs changed: startDate and endDate
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@32623 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-workflow/src/main/resources/info/magnolia/module/workflow/messages_en.properties
+++ b/magnolia-module-workflow/src/main/resources/info/magnolia/module/workflow/messages_en.properties
@@ -22,6 +22,8 @@ dialogs.editWorkItem.message = Message (Exception)
 dialogs.editActivationWorkItem.tabActivation = Activation
 dialogs.editActivationWorkItem.tabActivation.recursive = Incl. subs
 dialogs.editActivationWorkItem.tabActivation.subpages = Sub items
+dialogs.editActivationWorkItem.tabActivation.startDate = Publication Date
+dialogs.editActivationWorkItem.tabActivation.endDate = Expiration Date
 
 subpages.version = Version
 subpages.date = Date
