added missing (empty) keys
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@32837 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_id.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_id.properties
@@ -17,6 +17,7 @@ buttons.move         = Pindah
 buttons.new          = Baru
 buttons.ok           = OK
 buttons.preview      = Preview
+buttons.preview.hidden=
 buttons.properties   = Properties
 buttons.save         = Simpan
 
