--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_de.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_de.properties
@@ -17,6 +17,7 @@ buttons.move         = Bewegen
 buttons.new          = Neu
 buttons.ok           = OK
 buttons.preview      = Vorschau
+buttons.preview.hidden=
 buttons.properties   = Eigenschaften
 buttons.save         = Speichern
 
