--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_fi.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_fi.properties
@@ -17,6 +17,7 @@ buttons.move         = Siirr\u00E4
 buttons.new          = Uusi
 buttons.ok           = OK
 buttons.preview      = Esikatsele
+buttons.preview.hidden=
 buttons.properties   = Ominaisuudet
 buttons.save         = Tallenna
 
