--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_fr.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_fr.properties
@@ -17,6 +17,7 @@ buttons.move         = D\u00e9placer
 buttons.new          = Nouveau
 buttons.ok           = Confirmer
 buttons.preview      = Aper\u00e7u
+buttons.preview.hidden=
 buttons.properties   = Propri\u00e9t\u00e9s
 buttons.save         = Enregistrer
 
