added missing (empty) keys
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@32838 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_ja.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_ja.properties
@@ -17,6 +17,7 @@ buttons.move         = \u79FB\u52D5
 buttons.new          = \u65B0\u898F\u4F5C\u6210
 buttons.ok           = OK
 buttons.preview      = \u30D7\u30EC\u30D3\u30E5\u30FC
+buttons.preview.hidden=
 buttons.properties   = \u8A2D\u5B9A\u5909\u66F4
 buttons.save         = \u4FDD\u5B58
 
