--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_nl.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_nl.properties
@@ -17,6 +17,7 @@ buttons.move         = Verplaats
 buttons.new          = Nieuw
 buttons.ok           = OK
 buttons.preview      = Preview
+buttons.preview.hidden=
 buttons.properties   = Eigenschappen
 buttons.save         = Sla op
 
