--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_no.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_no.properties
@@ -17,6 +17,7 @@ buttons.move         = Flytt
 buttons.new          = Ny
 buttons.ok           = OK
 buttons.preview      = Forh\u00E5ndsvis
+buttons.preview.hidden=
 buttons.properties   = Egenskaper
 buttons.save         = Lagre
 
