--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_pt.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_pt.properties
@@ -17,6 +17,7 @@ buttons.move         = Mover
 buttons.new          = Novo
 buttons.ok           = OK
 buttons.preview      = Antevis\uFFFDo
+buttons.preview.hidden=
 buttons.properties   = Propriedades
 buttons.save         = Gravar
 
