--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_sv.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_sv.properties
@@ -17,6 +17,7 @@ buttons.move         = Flytta
 buttons.new          = Ny
 buttons.ok           = OK
 buttons.preview      = F\u00F6rhandsvisning
+buttons.preview.hidden=
 buttons.properties   = Egenskaper
 buttons.save         = Spara
 
