--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_zh_TW.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_zh_TW.properties
@@ -17,6 +17,7 @@ buttons.move         = \u7EC9\u8BF2\u5ACA
 buttons.new          = \u93C2\u677F\u7F13
 buttons.ok           = \u7EB0\u9E3F\u735A
 buttons.preview      = \u95CB\u612F\uE729
+buttons.preview.hidden=
 buttons.properties   = \u705E\uE101\uFFFD\uFFFD
 buttons.save         = \u6DC7\u6FC6\u74E8
 
