--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_tr.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_tr.properties
@@ -17,6 +17,7 @@ buttons.move         = Ta\u015F\u0131
 buttons.new          = Yeni
 buttons.ok           = Tamam
 buttons.preview      = \u00D6nizleme
+buttons.preview.hidden=
 buttons.properties   = \u00D6zellikleri
 buttons.save         = Kaydet
 
