added missing accents, fixed capitalization and hyphenation of "e-mail"
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@32842 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_fr.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_fr.properties
@@ -138,7 +138,7 @@ inbox.proceed = Activer
 inbox.reject  = Refuser
 inbox.task    = T\u00e2che
 
-inline.delete.text.js       = Le paragraphe s\u00e9lectionn\u00e9 va \u00eatre effac\u00e9.\n\nEtes-vous s\u00fbr de vouloir continuer ?
+inline.delete.text.js       = Le paragraphe s\u00e9lectionn\u00e9 va \u00eatre effac\u00e9.\n\n\u00cates-vous s\u00fbr de vouloir continuer ?
 inline.delete.title.js      = Effacer le paragraphe ?
 inline.move.aboveThisOne.js = D\u00e9placer le paragraphe s\u00e9lectionn\u00e9 au-dessus de celui-ci
 
@@ -173,7 +173,7 @@ menu.groups             = Groupes
 menu.inbox              = Bo\u00eete aux lettres
 menu.roles              = R\u00f4les
 menu.search             = Recherche
-menu.security           = Securit\u00e9
+menu.security           = S\u00e9curit\u00e9
 menu.tools              = Utilitaires
 menu.tools.access       = Acc\u00e8s
 menu.tools.deployment   = D\u00e9ploiement
@@ -184,7 +184,7 @@ menu.tools.flows.upload = Uploader un processus
 menu.tools.import       = Importer
 menu.tools.info         = Configuration
 menu.tools.logging      = Messages de Log
-menu.tools.mail         = eMail
+menu.tools.mail         = E-mail
 menu.tools.query        = Requ\u00eates JCR
 menu.tools.websiteJCR   = Navigateur JCR (Site web)
 menu.users              = Utilisateurs
@@ -304,7 +304,7 @@ tree.web.title                               = Titre
 users.edit.configAdministrator = Administrateur des configurations
 users.edit.create              = Cr\u00e9er un nouvel utilisateur
 users.edit.edit                = Editer l'utilisateur
-users.edit.email               = Adresse eMail
+users.edit.email               = Adresse e-mail
 users.edit.fullname            = Nom complet
 users.edit.groups              = Groupes
 users.edit.language            = Langue
