fixed some portuguese translations
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@33344 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_pt.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_pt.properties
@@ -4,7 +4,7 @@
 
 about.build   = Build
 about.title   = Sobre Magnolia
-about.version = Vers\uFFFDo
+about.version = Vers\u00e3o
 
 buttons.add          = Adicionar
 buttons.admincentral = AdminCentral
@@ -12,11 +12,11 @@ buttons.cancel       = Cancelar
 buttons.choose       = Escolher...
 buttons.delete       = Apagar
 buttons.edit         = Editar
-buttons.editfooter   = Editar rodap\uFFFD
+buttons.editfooter   = Editar rodap\u00e9
 buttons.move         = Mover
 buttons.new          = Novo
 buttons.ok           = OK
-buttons.preview      = Antevis\uFFFDo
+buttons.preview      = Antevis\u00e3o
 buttons.preview.hidden=
 buttons.properties   = Propriedades
 buttons.save         = Gravar
@@ -26,9 +26,9 @@ cacheservlet.success  = Entire cache successfully generated
 cacheservlet.title    = Cache Generator Servlet
 cacheservlet.warning  = Warning, cache generator won't work with this magnolia instance. You're probably on the admin server.
 
-central.loggedInAs     = Voc\uFFFDs como You are logged in as {0}
+central.loggedInAs     = Voc\ufffds como You are logged in as {0}
 central.logout         = Logout
-central.publicInstance = Inst\uFFFDncia P\uFFFDblica
+central.publicInstance = Inst\ufffdncia P\ufffdblica
 central.title          = Magnolia AdminCentral
 
 dialog.acl.choose.js                   = Escollha um papel por favor.
@@ -41,7 +41,7 @@ dialog.calendar.month10.js             = Outubro
 dialog.calendar.month11.js             = Novembro
 dialog.calendar.month12.js             = Dezembro
 dialog.calendar.month2.js              = Fevereiro
-dialog.calendar.month3.js              = Mar\uFFFDo
+dialog.calendar.month3.js              = Mar\u00e7o
 dialog.calendar.month4.js              = Abril
 dialog.calendar.month5.js              = Maio
 dialog.calendar.month6.js              = Junho
@@ -54,14 +54,14 @@ dialog.calendar.thu.js                 = Qui
 dialog.calendar.tue.js                 = Ter
 dialog.calendar.wed.js                 = Qua
 dialog.date.select                     = Seleccionar data...
-dialog.editTitle                       = Di\uFFFDlogo de edi\uFFFD\uFFFDo do Magn\uFFFDlia
+dialog.editTitle                       = Di\ufffdlogo de edi\ufffd\ufffdo do Magnolia
 dialog.file.filename                   = Ficheiro
 dialog.file.remove                     = Remove file
 dialog.link.internal                   = Link interno...
-dialog.paragraph.createNew             = Criar novo par\uFFFDgrafo
-dialog.paragraph.paragraphNotAvailable = Par\uFFFDgrafo {0} n\uFFFDo est\uFFFD dispon\uFFFDvel
-dialog.paragraph.select                = Selecione um tipo para o novo par\uFFFDgrafo
-dialog.password.failed.js              = Falhou a verifica\uFFFD\uFFFDo do c\uFFFDdigo de utilizador\!
+dialog.paragraph.createNew             = Criar novo par\ufffdgrafo
+dialog.paragraph.paragraphNotAvailable = Par\ufffdgrafo {0} n\u00e3o est\ufffd dispon\ufffdvel
+dialog.paragraph.select                = Selecione um tipo para o novo par\ufffdgrafo
+dialog.password.failed.js              = Falhou a verifica\ufffd\ufffdo do c\ufffddigo de utilizador\!
 dialog.password.verify                 = Please verify your entry\:
 dialog.richedit.append                 = Append text
 dialog.richedit.applaylink             = Aplicar link
@@ -73,13 +73,13 @@ dialog.richedit.cleanpaste             = Limpar paste
 dialog.richedit.info                   = info
 dialog.richedit.insert                 = Inserir texto
 dialog.richedit.internallink           = Link interno...
-dialog.richedit.italic                 = It\uFFFDlico
+dialog.richedit.italic                 = It\ufffdlico
 dialog.richedit.link                   = Link
-dialog.richedit.nopaste.js             = O teu browser n\uFFFDo suporta limpar paste paste
+dialog.richedit.nopaste.js             = O teu browser n\u00e3o suporta limpar paste paste
 dialog.richedit.numberedlist           = Lista numerada
-dialog.richedit.pasteUsingThisButton   = Utilize este bot\uFFFDo para colar texto\!
-dialog.richedit.pastehelp.js           = O texto copiado de algumas aplica\uFFFD\uFFFDes (ex. Word, Excel) cont\uFFFDm informa\uFFFD\uFFFDo adicional que pode destruir o conte\uFFFDdo web.\n\n Colar texto atrav\uFFFDs de Ctrl-V pode inserir esta informa\uFFFD\uFFFDo adicional.
-dialog.richedit.pastetext              = Colar (Ctrl-V) texto no campo de texto abaixo, depois utiliza os bot\uFFFDes para adicionar ou inserir na frame do editordialog.richedit.append\=Anexar texto
+dialog.richedit.pasteUsingThisButton   = Utilize este bot\ufffdo para colar texto\!
+dialog.richedit.pastehelp.js           = O texto copiado de algumas aplica\ufffd\ufffdes (ex. Word, Excel) cont\ufffdm informa\ufffd\ufffdo adicional que pode destruir o conte\ufffddo web.\n\n Colar texto atrav\ufffds de Ctrl-V pode inserir esta informa\ufffd\ufffdo adicional.
+dialog.richedit.pastetext              = Colar (Ctrl-V) texto no campo de texto abaixo, depois utiliza os bot\ufffdes para adicionar ou inserir na frame do editordialog.richedit.append\=Anexar texto
 dialog.richedit.redo                   = Voltar a Fazer
 dialog.richedit.removelink             = Remover link
 dialog.richedit.removestyle            = Remover estilo
@@ -91,13 +91,13 @@ dialog.richedit.textcolor              = Cor de Texto
 dialog.richedit.textstyle              = Estilo do texto
 dialog.richedit.underline              = Sublinhado
 dialog.richedit.undo                   = Desfazer
-dialog.richedit.unorderedlist          = list n\uFFFDo ordenada
+dialog.richedit.unorderedlist          = list n\u00e3o ordenada
 dialog.verifyname.illegalCharacter.js  = Caracteres ilegais no nome\!
 dialog.webdav.checked                  = checked
 dialog.webdav.connectedTo              = Ligado a
-dialog.webdav.directoryIsEmpty         = Directoria est\uFFFD vazia
+dialog.webdav.directoryIsEmpty         = Directoria est\ufffd vazia
 dialog.webdav.home                     = Home
-dialog.webdav.noSelection              = Sem selec\uFFFD\uFFFDo
+dialog.webdav.noSelection              = Sem selec\ufffd\ufffdo
 dialog.webdav.parentdirectory          = Parent directory
 dialog.webdav.refresh                  = Refresh
 
@@ -124,9 +124,9 @@ inbox.proceed = Proceed
 inbox.reject  = Reject
 inbox.task    = Task
 
-inline.delete.text.js       = O par\uFFFDgrafo seleccionad ser\uFFFD apagado de imediato.\n\nTem a certeza que deseja continuar?
-inline.delete.title.js      = Apagar par\uFFFDgrafo?
-inline.move.aboveThisOne.js = Mover o par\uFFFDgrafo seleccionada para cima deste
+inline.delete.text.js       = O par\ufffdgrafo seleccionad ser\ufffd apagado de imediato.\n\nTem a certeza que deseja continuar?
+inline.delete.title.js      = Apagar par\ufffdgrafo?
+inline.move.aboveThisOne.js = Mover o par\ufffdgrafo seleccionada para cima deste
 
 linkbrowser.refresh           = Actualizar
 linkbrowser.role.fullrolename = Nome completo do papel
@@ -136,13 +136,13 @@ linkbrowser.web.title         = Titulo
 
 menu.about            = Sobre Magnolia
 menu.bpn              = Processes
-menu.config           = Configura\uFFFD\uFFFDo
-menu.custombutton     = Bot\uFFFDo personalizado
+menu.config           = Configura\ufffd\ufffdo
+menu.custombutton     = Bot\ufffdo personalizado
 menu.dms              = Documents
 menu.flow.website     = Workflow website
 menu.groups           = Groups
 menu.inbox            = Inbox
-menu.roles            = Pap\uFFFDis
+menu.roles            = Pap\ufffdis
 menu.search           = Search
 menu.security         = Security
 menu.tools            = Tools
@@ -168,15 +168,15 @@ repository.website    = Website
 
 roles.edit.accessControlList = Lista de acesso de controlos
 roles.edit.create            = Criar novo papel
-roles.edit.description       = Descri\uFFFD\uFFFDo
+roles.edit.description       = Descri\ufffd\ufffdo
 roles.edit.edit              = Editar papel
 roles.edit.fullname          = Nome completo
 roles.edit.properties        = Einstellungen
 roles.edit.rolename          = Nome do papel
 roles.edit.subNodes          = Sub nodes
-roles.edit.subPages          = Sub p\uFFFDginas
+roles.edit.subPages          = Sub p\u00e1ginas
 roles.edit.thisAndSubNodes   = Selected and sub nodes
-roles.edit.thisAndSubPages   = Sub p\uFFFDginas e a seleccionada
+roles.edit.thisAndSubPages   = Sub p\u00e1ginas e a seleccionada
 roles.permission.deny        = Negar acesso
 roles.permission.readOnly    = Apenas Leitura
 roles.permission.readWrite   = Leitura/Escrita
@@ -184,19 +184,19 @@ roles.permission.readWrite   = Leitura/Escrita
 system.restart = One or more module need a restart of the container
 
 tree.config.date                           = Mod. data
-tree.config.menu.activate                  = Activar este n\uFFFD
-tree.config.menu.activateInclSubs          = Activar sub n\uFFFDs
+tree.config.menu.activate                  = Activar este n\u00f3
+tree.config.menu.activateInclSubs          = Activar sub n\u00f3s
 tree.config.menu.copy                      = Copiar
 tree.config.menu.deactivate                = Desactivar
 tree.config.menu.delete                    = Apagar
 tree.config.menu.move                      = Mover
 tree.config.menu.newFolder                 = Nova pasta
-tree.config.menu.newNode                   = Novo n\uFFFD de conte\uFFFDdo
-tree.config.menu.newNodeData               = Novo n\uFFFD  de dados
+tree.config.menu.newNode                   = Novo n\u00f3 de conte\ufffddo
+tree.config.menu.newNodeData               = Novo n\u00f3 de dados
 tree.config.type                           = Tipo
 tree.config.value                          = Valor
-tree.deletenode.confirm.text.js            = O n\uFFFD\n{0}\nser\uFFFD desactivado e apagado imediatamente.\n\nTem a certeza que deseja continuar?
-tree.deletenode.confirm.title.js           = Apagar n\uFFFD?
+tree.deletenode.confirm.text.js            = O n\u00f3\n{0}\nser\ufffd desactivado e apagado imediatamente.\n\nTem a certeza que deseja continuar?
+tree.deletenode.confirm.title.js           = Apagar n\u00f3?
 tree.error.activate                        = Can't activate\:
 tree.error.copy                            = Can't copy\:
 tree.error.deactivate                      = Can't deactivate\:
@@ -206,13 +206,13 @@ tree.error.rename                          = Can't rename\:
 tree.exportnode.confirm.text.js            = Tem a certeza que deseja continuar?
 tree.exportnode.confirm.title.js           = Exportar {0} para xml.
 tree.loading.js                            = A carregar...
-tree.menu.export                           = Exportar \uFFFDrvore para xml
+tree.menu.export                           = Exportar \ufffdrvore para xml
 tree.menu.import                           = Import from xml
 tree.menu.navigate                         = 
 tree.menu.refresh                          = Actualizar
 tree.movenode.confirm.text.js              = The node\n{0}\nwill be de-activated immediately.\n\nAre you sure to continue?
 tree.movenode.confirm.title.js             = Move node?
-tree.pastenode.itself.js                   = N\uFFFDo \uFFFD poss\uFFFDvel mover um n\uFFFD para ele pr\uFFFDprio.
+tree.pastenode.itself.js                   = N\u00e3o \ufffd poss\ufffdvel mover um n\u00f3 para ele pr\ufffdprio.
 tree.roles.date                            = Mod. data
 tree.roles.fullname                        = Nome completo do papel
 tree.roles.menu.activate                   = Activar papel
@@ -236,17 +236,17 @@ tree.users.menu.move                       = Mover utilizador
 tree.users.menu.new                        = Novo utilizador
 tree.users.name                            = Nome utilizador
 tree.web.date                              = Mod. data
-tree.web.menu.activate                     = Activar esta p\uFFFDgina
-tree.web.menu.activateInclSubs             = Activar inclui as sub p\uFFFDginas
-tree.web.menu.copy                         = Copiar p\uFFFDgina
+tree.web.menu.activate                     = Activar esta p\u00e1gina
+tree.web.menu.activateInclSubs             = Activar inclui as sub p\u00e1ginas
+tree.web.menu.copy                         = Copiar p\u00e1gina
 tree.web.menu.deactivate                   = Desactivar
-tree.web.menu.delete                       = Apagar p\uFFFDgina
-tree.web.menu.move                         = Mover p\uFFFDgina
-tree.web.menu.new                          = Nova p\uFFFDgina
-tree.web.menu.open                         = Abrir p\uFFFDgina...
+tree.web.menu.delete                       = Apagar p\u00e1gina
+tree.web.menu.move                         = Mover p\u00e1gina
+tree.web.menu.new                          = Nova p\u00e1gina
+tree.web.menu.open                         = Abrir p\u00e1gina...
 tree.web.page                              = Page
 tree.web.template                          = Modelo
-tree.web.title                             = T\uFFFDtulo
+tree.web.title                             = T\ufffdtulo
 
 users.edit.configAdministrator = Configurar administrator
 users.edit.create              = Criar novo utilizador
@@ -254,10 +254,10 @@ users.edit.edit                = Alterar utilizador
 users.edit.email               = Email
 users.edit.fullname            = Nome completo
 users.edit.language            = Language
-users.edit.leaveEmpty          = Deixe em branco para n\uFFFDo alterar
-users.edit.password            = C\uFFFDdigo de acesso
+users.edit.leaveEmpty          = Deixe em branco para n\u00e3o alterar
+users.edit.password            = C\ufffddigo de acesso
 users.edit.roles               = Papeis
-users.edit.rolesAdministrator  = Pap\uFFFDis administrator
+users.edit.rolesAdministrator  = Pap\ufffdis administrator
 users.edit.username            = Nome Utilizador
 users.edit.usersAdministrator  = Utilizadores administrator
 
@@ -268,4 +268,4 @@ versions.restore.exception      = Wasn''t able to restore: {0}
 versions.restore.latest.success = Successfully restored latest version.
 versions.show                   = Show
 
-webdav.error = Ocorreu um erro. N\uFFFDo \uFFFD possivel ligar ao servidor WebDAV
+webdav.error = Ocorreu um erro. N\u00e3o \ufffd possivel ligar ao servidor WebDAV
